--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -16,4 +16,5 @@
     <string name="dialog_new_counter_volume">Obsah</string>
     <string name="dialog_confirm_counter_delete_title">Smazat počítadlo \"%s\"?</string>
     <string name="dialog_confirm_counter_stop_title">Zastavit počítadlo \"%s\"?</string>
+    <string name="nav_beverage_database">Databáze nápojů</string>
 </resources>
