--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -13,8 +13,12 @@
     <string name="dialog_new_counter_title">Nové počítadlo</string>
     <string name="dialog_new_counter_name">Název</string>
     <string name="dialog_new_counter_alcohol">Alkohol</string>
-    <string name="dialog_new_counter_volume">Obsah</string>
+    <string name="dialog_new_counter_volume">Objem</string>
     <string name="dialog_confirm_counter_delete_title">Smazat počítadlo \"%s\"?</string>
     <string name="dialog_confirm_counter_stop_title">Zastavit počítadlo \"%s\"?</string>
     <string name="nav_beverage_database">Databáze nápojů</string>
+    <string name="dialog_edit_beverage_title">Upravit nápoj</string>
+    <string name="save">Uložit</string>
+    <string name="edit_beverage_menu_item">Upravit nápoj</string>
+    <string name="pick">Vybrat</string>
 </resources>
