--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -21,4 +21,5 @@
     <string name="save">Uložit</string>
     <string name="edit_beverage_menu_item">Upravit nápoj</string>
     <string name="pick">Vybrat</string>
+    <string name="add_beverage_menu_item">Přidat nápoj</string>
 </resources>
