--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="dialog_new_counter_name">Name</string>
     <string name="dialog_new_counter_alcohol">Alcohol</string>
     <string name="dialog_new_counter_volume">Volume</string>
+    <string name="dialog_new_counter_incomplete_data">Name and volume must be filled</string>
 
     <string name="dialog_confirm_counter_delete_title">Delete counter \"%s\"?</string>
     <string name="dialog_confirm_counter_stop_title">Stop counter \"%s\"?</string>
