Beverage database is filterable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="stop_counter_menu_item">Stop counter</string>
     <string name="edit_beverage_menu_item">Edit beverage</string>
     <string name="add_beverage_menu_item">Add beverage</string>
+    <string name="search_menu_item">Search</string>
+    <string name="clear_search_menu_item">Clear search</string>
 
     <string name="plus" translatable="false">+</string>
     <string name="minus" translatable="false">-</string>
