--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -23,4 +23,6 @@
     <string name="pick">Vybrat</string>
     <string name="add_beverage_menu_item">Přidat nápoj</string>
     <string name="dialog_new_counter_incomplete_data">Název a objem musí být vyplňeny</string>
+    <string name="search_menu_item">Hledat</string>
+    <string name="clear_search_menu_item">Vymazat hledání</string>
 </resources>
