--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
-    <string name="app_name">Cheers</string>
+    <string name="app_name">Cheers!</string>
 
     <string name="nav_beverages">Beverages</string>
     <string name="nav_counters">Counters</string>
     <string name="nav_beverage_database">Beverage database</string>
+    <string name="nav_about_app">About app</string>
 
     <string name="add_counter_menu_item">Add counter</string>
     <string name="delete_counter_menu_item">Delete counter</string>
@@ -24,6 +25,7 @@
     <string name="stop">Stop</string>
     <string name="save">Save</string>
     <string name="pick">Pick</string>
+    <string name="close">Close</string>
 
     <string name="beverage_beer">Beer</string>
     <string name="beverage_wine">Wine</string>
@@ -48,4 +50,9 @@
     </plurals>
 
     <string name="dialog_edit_beverage_title">Edit beverage</string>
+
+    <string name="about_app_author"><b>Author:</b> Jan Pejsar</string>
+    <string name="about_app_version">Version</string>
+    <string name="about_app_build">Build</string>
+    <string name="about_app_build_time">Build time</string>
 </resources>
