--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -52,4 +52,6 @@
     <string name="beverage_recycler_view_item_description_rest">Poslední počítadlo: %sx %sL\nCelkem: %sL</string>
     <string name="beverage_recycler_view_item_description_no_data">Pro tento nápoj nebyla nalezena žádná počítadla</string>
     <string name="nav_statistics">Statistiky</string>
+    <string name="delete_beverage_menu_item">Smazat nápoj</string>
+    <string name="dialog_confirm_beverage_delete_title">Smazat nápoj \"%s\"?</string>
 </resources>
