GraphView points now have hitboxes

--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -55,4 +55,6 @@
     <string name="delete_beverage_menu_item">Smazat nápoj</string>
     <string name="dialog_confirm_beverage_delete_title">Smazat nápoj \"%s\"?</string>
     <string name="description_text_view_loading">Načítání…</string>
+    <string name="time_text_view_empty">00:00</string>
+    <string name="beverage_name_text_view">Žádný vybraný bod</string>
 </resources>
