--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -57,4 +57,5 @@
     <string name="description_text_view_loading">Načítání…</string>
     <string name="time_text_view_empty">00:00</string>
     <string name="beverage_name_text_view">Žádný vybraný bod</string>
+    <string name="dialog_edit_point_title">Upravit bod</string>
 </resources>
